syntax = "proto3";

package playlist;

option go_package = "github.com/Zhan028/Music_Service/proto;proto";

// Добавляем сообщение для метаданных аутентификации
message AuthMetadata {
  string user_id = 1;
  string token = 2;
}

service PlaylistService {
  rpc CreatePlaylist(CreatePlaylistRequest) returns (Playlist) {}
  rpc GetPlaylist(GetPlaylistRequest) returns (Playlist) {}
  rpc GetUserPlaylists(GetUserPlaylistsRequest) returns (PlaylistList) {}
  rpc AddTrackToPlaylist(AddTrackRequest) returns (Playlist) {}
  rpc RemoveTrackFromPlaylist(RemoveTrackRequest) returns (Playlist) {}
  rpc DeletePlaylist(DeletePlaylistRequest) returns (DeletePlaylistResponse) {}
}

message Playlist {
  string id = 1;
  string name = 2;
  string user_id = 3; // Владелец плейлиста
  string description = 4;
  repeated Track tracks = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
  bool is_public = 8; // Добавляем флаг публичности
}

message Track {
  string id = 1;
  string title = 2;
  string artist = 3;
  int32 duration = 4;
  string album = 5;
  string user_id = 6; // Владелец трека
}

// Добавляем валидацию в запросы
message CreatePlaylistRequest {
  string name = 1;
  string user_id = 2; // Должен совпадать с JWT
  string description = 3;
  repeated Track tracks = 4;
  bool is_public = 5;
}

message GetPlaylistRequest {
  string id = 1;
  string user_id = 2; // Для проверки прав доступа
}

message GetUserPlaylistsRequest {
  string user_id = 1;
  bool include_public = 2; // Флаг для включения публичных плейлистов
}

message PlaylistList {
  repeated Playlist playlists = 1;
}

message AddTrackRequest {
  string playlist_id = 1;
  Track track = 2;
  string user_id = 3; // Для проверки прав
}

message RemoveTrackRequest {
  string playlist_id = 1;
  string track_id = 2;
  string user_id = 3; // Для проверки прав
}

message DeletePlaylistRequest {
  string id = 1;
  string user_id = 2; // Должен совпадать с владельцем
}

message DeletePlaylistResponse {
  bool success = 1;
}